src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__it_matches_with_arbitrarilly.snap
---
source: src/type_atoms/adt/interlace.rs
expression: "(insta_match_test!(+ parse Interlace<(Ident, Rep<Ident>), Rep<FPunct<','>>> :\n        hello hi world,,, hi, there),\n    insta_match_test!(* peek Interlace<(Ident, Rep<Ident>), Rep<FPunct<','>>>\n        : hello hi world,,, hi, there))"
---
(
    Ok(
        Interlace {
            values: [
                (
                    Ident(
                        hello,
                    ),
                    Rep(
                        [
                            Ident(
                                hi,
                            ),
                            Ident(
                                world,
                            ),
                        ],
                    ),
                ),
                (
                    Ident(
                        hi,
                    ),
                    Rep(
                        [],
                    ),
                ),
                (
                    Ident(
                        there,
                    ),
                    Rep(
                        [],
                    ),
                ),
            ],
        },
    ),
    Some(
        9,
    ),
)
