src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__it_matches_with_arbitrarilly_sized_interlacing.snap
---
source: src/type_atoms/adt/interlace.rs
expression: "(insta_match_test!(+ parse Interlace<(Ident, Option<Ident>), Vec<FPunct<','>>>\n        : hello hi world,,, hi, there hello, world, hi, there),\n    insta_match_test!(* peek\n        Interlace<(Ident, Option<Ident>), Vec<FPunct<','>>> : hello hi\n        world,,, hi, there hello, world, hi, there))"
---
(
    Ok(
        Interlace {
            values: [
                (
                    Ident(
                        hello,
                    ),
                    Some(
                        Ident(
                            hi,
                        ),
                    ),
                ),
                (
                    Ident(
                        world,
                    ),
                    None,
                ),
                (
                    Ident(
                        hi,
                    ),
                    None,
                ),
                (
                    Ident(
                        there,
                    ),
                    Some(
                        Ident(
                            hello,
                        ),
                    ),
                ),
                (
                    Ident(
                        world,
                    ),
                    None,
                ),
                (
                    Ident(
                        hi,
                    ),
                    None,
                ),
                (
                    Ident(
                        there,
                    ),
                    None,
                ),
            ],
        },
    ),
    Some(
        16,
    ),
)
